@@ -12,3 +12,4 @@ copy "governmentMapping.txt" "HttTToV2\governmentMapping.txt"
 copy "unit_strength.txt" "HttTToV2\unit_strength.txt"
 copy "port_whitelist.txt" "HttTToV2\port_whitelist.txt"
 copy "port_blacklist.txt" "HttTToV2\port_blacklist.txt"
+copy "regiment_costs.txt" "HttTToV2\regiment_costs.txt"
